<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DroidSamples</string>
    <string name="AccelDemo">AccelDemo</string>
    <string name="BTSend">BTSend</string>
    <string name="RCNavigation">RCNavigation</string>
    <string name="RemotePilot">RemotePilot</string>
    <string name="SensorTest">SensorTest</string>
    <string name="TachoCount">TachoCount</string>
    <string name="TiltDemo">TiltDemo</string>
    
    <string name="connect_tab">Connect</string>
	<string name="command_tab">Commands</string>
	<string name="xyz_tab">Pos. and Heading</string>
	<string name="name_label">Name</string>
	<string name="address_label">Address</string>
	<string name="connect_button">Connect</string>
	<string name="x_label">          X:</string>
	<string name="y_label">          Y:</string>
	<string name="heading_label">   Heading:</string>
	<string name="rc_nav_control">RCNavigationControl</string>
	<string name="status_label">Status: </string>
	<string name="goto_button">GoTo XY</string>
	<string name="rotate_button">Rotate</string>
	<string name="travel_button">Travel</string>
</resources>